<resources>
    <string name="app_name">Smack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="please_login_in">Please Login In</string>
    <string name="message">message:</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">username</string>
    <string name="passoword">passoword</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="create_user">CREATE USER</string>
    <string name="generate_background_color">Generate background color</string>
    <string name="logout">LOGOUT</string>
</resources>
